--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "backend/server.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/backend/server.js"
+      "dest": "backend/server.js"
     }
   ],
   "env": {
