--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,11 +12,14 @@
       "dest": "backend/server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/",
       "dest": "backend/server.js"
     }
   ],
   "env": {
+    "MONGODB_URI": "@mongodb_uri",
+    "JWT_SECRET": "@jwt_secret",
+    "JWT_REFRESH_SECRET": "@jwt_refresh_secret",
     "NODE_ENV": "production"
   }
 }
