--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,5 @@
-# Database
-MONGODB_URI=mongodb+srv://saravanakumar143g1234:1234@ecomanager.eukxe0b.mongodb.net/
-DB_NAME=waste_management
-
-# JWT Secrets
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-here
-
-# Server
-PORT=5000
-# NODE_ENV=production
+MONGODB_URI=mongodb+srv://saravanakumar143g1234:1234@ecomanager.eukxe0b.mongodb.net/waste_management
+JWT_SECRET=your-super-secret-jwt-key-here-change-this-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-here-change-this
+NODE_ENV=production
+MAX_FILE_SIZE=5242880
